# extractly

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  database.py  main.py  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/: discovery_routes.py  process_docs.py  results_dashboard.py
backend/app/config/: project_setup.py
backend/app/database/: database.py  db_utils.py
backend/app/models/: classification_model.py  extraction_model.py  settings_model.py
backend/app/services/: async_request_handler.py  classify.py  digitize.py  document_processor.py  extract.py  validate.py
backend/app/utils/: write_results.py
backend/models/: classification_model.py  extraction_model.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  script.js  style.css
frontend/app/: index.html
frontend/app/css/: process-docs.css
frontend/app/js/: dashboard.js  discovery.js  document-validation.js  process-docs.js  project-setup.js
frontend/app/pages/: discovery.html  document-dashboard.html  document-validation.html  index.html  process-documents.html  project-setup.html
frontend/pages/: process-documents.html
