[project]
name = "extractly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-orm>=1.2.10",
    "sqlite-utils>=3.38",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0.1",
]
